--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <br>
 
 <header>Number to Guess: <span id="randomnumber"></span></header>
-
   <br>
   <br>
 
@@ -20,6 +19,18 @@
   <img class= "crystalimage" src= "https://www.bluediamondtraveling.com/uploads/1/2/2/9/122972147/69412573-blue-diamond_1_orig.jpg" id ="image2">
   <img class= "crystalimage" src= "https://www.bluediamondtraveling.com/uploads/1/2/2/9/122972147/69412573-blue-diamond_1_orig.jpg" id ="image3">
   <img class= "crystalimage" src= "https://www.bluediamondtraveling.com/uploads/1/2/2/9/122972147/69412573-blue-diamond_1_orig.jpg" id ="image4">
+<br>
+<br>
+<br>
+<p>Instructions:</p>
+<p> Click the crystals to make your total match the number shown above.</p>
+<p>Be careful...if you exceed the number, you lose!</p>
+
+<br>
+<br>
+<br>
+
+<h2>Created by PJae, June 2019</h2>
 
   <!-- JAVASCRIPT -->
   
