--- a/index.html
+++ b/index.html
@@ -9,22 +9,28 @@
     <link rel="stylesheet" type="text/css" href= "assets/CSS/style.css">
 </head>
 <body>
-<br>
-
-<header>Number to Guess: <span id="randomnumber"></span></header>
+  <br>
+  <div class = "wrap">
+    <header class = "left">Score to Match: <span id="randomnumber"> </span></header>
+    <header class = "left">Your Score: <span id="yourscore"></span> </header>
+    <header class = "right">Total Wins: <span id="yourwins"></span> </header>
+    <header class= "right">Total Losses: <span id="yourlosses"></span> </header>
+  </div>
   <br>
   <br>
+  <hr>
 
   <img class= "crystalimage" src= "https://www.bluediamondtraveling.com/uploads/1/2/2/9/122972147/69412573-blue-diamond_1_orig.jpg" id ="image1"> 
   <img class= "crystalimage" src= "https://www.bluediamondtraveling.com/uploads/1/2/2/9/122972147/69412573-blue-diamond_1_orig.jpg" id ="image2">
   <img class= "crystalimage" src= "https://www.bluediamondtraveling.com/uploads/1/2/2/9/122972147/69412573-blue-diamond_1_orig.jpg" id ="image3">
   <img class= "crystalimage" src= "https://www.bluediamondtraveling.com/uploads/1/2/2/9/122972147/69412573-blue-diamond_1_orig.jpg" id ="image4">
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
+    <hr>
 <p>Instructions:</p>
-<p> Click the crystals to make your total match the number shown above.</p>
-<p>Be careful...if you exceed the number, you lose!</p>
+<p> Click the crystals to make your score match the number shown above.</p>
+<p>Be careful...if you exceed the score to match, you lose!</p>
 
 <br>
 <br>
